fix some spells

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T0_freeze.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T0_freeze.yml
@@ -24,6 +24,7 @@
         statusLifetime: 2
       - !type:AdjustTemperature
         amount: -12000
+      - !type:ExtinguishReaction
   - type: CP14MagicEffectVerbalAspect
     startSpeech: "Vos adepto frigus..."
   - type: CP14MagicEffectCastingVisual
