--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T0_freeze.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T0_freeze.yml
@@ -24,12 +24,13 @@
         statusLifetime: 2
       - !type:AdjustTemperature
         amount: -12000
+      - !type:ExtinguishReaction
   - type: CP14MagicEffectVerbalAspect
     startSpeech: "Vos adepto frigus..."
   - type: CP14MagicEffectCastingVisual
     proto: CP14RunePlantFreeze
   - type: EntityTargetAction
-    range: 10
+    range: 5
     interactOnMiss: false
     itemIconStyle: BigAction
     sound: !type:SoundPathSpecifier
@@ -40,6 +41,7 @@
     event: !type:CP14ToggleableEntityTargetActionEvent
       cooldown: 15
       castTime: 10
+      distanceThreshold: 5
       breakOnMove: false
 
 - type: entity
