Job proto rename to merchant

--- a/Resources/Prototypes/_CP14/Entities/Objects/Keys/keyrings.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Keys/keyrings.yml
@@ -81,7 +81,7 @@
 
 - type: entity
   parent: CP14BaseKeyRing
-  id: CP14KeyRingBanker
+  id: CP14KeyRingMerchant
   suffix: Banker
   components:
   - type: StorageFill
