--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -129,7 +129,7 @@
   - CP14GuildmasterSpells
 
 - type: roleLoadout
-  id: JobCP14Banker
+  id: JobCP14Merchant
   groups:
   - CP14GeneralSpells
   - CP14BankHead
