--- a/Resources/Prototypes/_CP14/Maps/arenas.yml
+++ b/Resources/Prototypes/_CP14/Maps/arenas.yml
@@ -36,9 +36,9 @@
             CP14Alchemist: [ 2, 2 ]
             CP14Blacksmith: [ 2, 2 ]
             CP14Innkeeper: [ 3, 4 ]
-            #Bank
+            #Traders
             CP14Commandant: [1, 1]
-            CP14Banker: [3, 4]
+            CP14Merchant: [3, 4]
             #Guard
             CP14Guard: [8, 8]
             CP14GuardCommander: [1, 1]
