--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -91,7 +91,6 @@ CP14WallWhitebrick: CP14WallMarbleBrick
 
 #2024-10-24
 CP14SpawnPointQuartermaster: CP14SpawnPointCommandant
-CP14SpawnPointMerchant: CP14SpawnPointBanker
 
 #2024-10-27
 CP14GatherableFlowersYellow: CP14GatherableDayflin
@@ -240,6 +239,9 @@ CP14OreIron: CP14OreIron1
 CP14OreGold: CP14OreGold1
 CP14OreMithril: CP14OreMithril1
 CP14Nail10: CP14Nail20
+
+#2025-07-02
+CP14SpawnPointBanker: CP14SpawnPointMerchant
 
 # <---> CrystallEdge migration zone end
 
