--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/sell.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/sell.yml
@@ -13,6 +13,20 @@
     count: 10
 
 - type: storePositionSell
+  id: CopperOre
+  name: cp14-store-sell-copperore-name
+  desc: cp14-store-sell-copperore-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/copper_ore.rsi
+    state: ore_3
+  price: 
+    min: 10
+    max: 20
+  service: !type:CP14SellStackService
+    stackId: CP14CopperOre
+    count: 10
+
+- type: storePositionSell
   id: IronBars
   name: cp14-store-sell-ironbar-name
   desc: cp14-store-sell-ironbar-desc
@@ -27,6 +41,20 @@
     count: 10
 
 - type: storePositionSell
+  id: IronOre
+  name: cp14-store-sell-ironore-name
+  desc: cp14-store-sell-ironore-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/iron_ore.rsi
+    state: ore_3
+  price: 
+    min: 20
+    max: 30
+  service: !type:CP14SellStackService
+    stackId: CP14IronOre
+    count: 10
+
+- type: storePositionSell
   id: GoldBars
   name: cp14-store-sell-goldbar-name
   desc: cp14-store-sell-goldbar-desc
@@ -38,6 +66,48 @@
     max: 1500
   service: !type:CP14SellStackService
     stackId: CP14GoldBar
+    count: 10
+
+- type: storePositionSell
+  id: GoldOre
+  name: cp14-store-sell-goldore-name
+  desc: cp14-store-sell-goldore-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/gold_ore.rsi
+    state: ore_3
+  price: 
+    min: 100
+    max: 150
+  service: !type:CP14SellStackService
+    stackId: CP14GoldOre
+    count: 10
+
+- type: storePositionSell
+  id: MithrilBars
+  name: cp14-store-sell-mithrilbar-name
+  desc: cp14-store-sell-mithrilbar-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/mithril_bar.rsi
+    state: bar_3
+  price: 
+    min: 2000
+    max: 3000
+  service: !type:CP14SellStackService
+    stackId: CP14MithrilBar
+    count: 10
+
+- type: storePositionSell
+  id: MithrilOre
+  name: cp14-store-sell-mithrilore-name
+  desc: cp14-store-sell-mithrilore-desc
+  icon: 
+    sprite: _CP14/Objects/Materials/mithril_ore.rsi
+    state: ore_3
+  price: 
+    min: 200
+    max: 300
+  service: !type:CP14SellStackService
+    stackId: CP14MithrilOre
     count: 10
 
 - type: storePositionSell
