--- a/Resources/Prototypes/_CP14/Entities/Objects/Flora/wild.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Flora/wild.yml
@@ -42,6 +42,10 @@
         reagents:
         - ReagentId: CP14BloodFlowerSap
           Quantity: 12
+  - type: Tag
+    tags:
+    - CP14FitInMortar
+    - CP14AlchemicalHerbals
 
 - type: entity
   id: CP14AgaricMushroom
@@ -74,6 +78,10 @@
         reagents:
         - ReagentId: CP14AgaricMushroom
           Quantity: 3
+  - type: Tag
+    tags:
+    - CP14FitInMortar
+    - CP14AlchemicalHerbals
 
 - type: entity
   id: CP14ChromiumSlime
@@ -138,6 +146,10 @@
         reagents:
         - ReagentId: CP14WildSageSap
           Quantity: 15
+  - type: Tag
+    tags:
+    - CP14FitInMortar
+    - CP14AlchemicalHerbals
 
 - type: entity
   id: CP14LumiMushroom
@@ -173,6 +185,10 @@
         reagents:
         - ReagentId: CP14LumiMushroom
           Quantity: 4
+  - type: Tag
+    tags:
+    - CP14FitInMortar
+    - CP14AlchemicalHerbals
 
 - type: entity
   id: CP14BlueAmanita
@@ -202,6 +218,10 @@
         reagents:
         - ReagentId: CP14BlueAmanita
           Quantity: 5
+  - type: Tag
+    tags:
+    - CP14FitInMortar
+    - CP14AlchemicalHerbals
   
 - type: entity
   id: CP14Dayflin
@@ -231,6 +251,10 @@
         reagents:
         - ReagentId: CP14YellowDayflinPulp
           Quantity: 4
+  - type: Tag
+    tags:
+    - CP14FitInMortar
+    - CP14AlchemicalHerbals
 
 - type: entity
   id: CP14AirLily
@@ -259,3 +283,7 @@
         reagents:
         - ReagentId: CP14AirLily
           Quantity: 4
+  - type: Tag
+    tags:
+    - CP14FitInMortar
+    - CP14AlchemicalHerbals
