--- a/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
+++ b/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
@@ -1,10 +1,8 @@
 
-# Jobs
-- type: playTimeTracker
-  id: CP14JobApprentice
+# Artisans
 
 - type: playTimeTracker
-  id: CP14JobAdventurer
+  id: CP14JobApprentice
 
 - type: playTimeTracker
   id: CP14JobAlchemist
@@ -15,17 +13,26 @@
 - type: playTimeTracker
   id: CP14JobInnkeeper
 
+# Mercenary
+
+- type: playTimeTracker
+  id: CP14JobGuildmaster
+
+- type: playTimeTracker
+  id: CP14JobAdventurer
+
+# Guard
+
 - type: playTimeTracker
   id: CP14JobGuardCommander
 
 - type: playTimeTracker
   id: CP14JobGuard
 
+# Trade guild
+
 - type: playTimeTracker
   id: CP14JobCommandant
 
 - type: playTimeTracker
-  id: CP14JobBanker
-
-- type: playTimeTracker
-  id: CP14JobGuildmaster
+  id: CP14JobMerchant
