--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -108,10 +108,10 @@
   - CP14CommandantHead
   - CP14GeneralEyes
   - CP14CommandantCloak
-  - CP14BankOuterClothing
-  - CP14BankShirt
-  - CP14BankPants
-  - CP14BankShoes
+  - CP14MerchantOuterClothing
+  - CP14MerchantShirt
+  - CP14MerchantPants
+  - CP14MerchantShoes
   - CP14GeneralBack
   - CP14GeneralTrinkets
 
@@ -129,14 +129,14 @@
   - CP14GuildmasterSpells
 
 - type: roleLoadout
-  id: JobCP14Banker
+  id: JobCP14Merchant
   groups:
   - CP14GeneralSpells
-  - CP14BankHead
-  - CP14BankOuterClothing
+  - CP14MerchantHead
+  - CP14MerchantOuterClothing
   - CP14GeneralEyes
-  - CP14BankShirt
-  - CP14BankPants
-  - CP14BankShoes
+  - CP14MerchantShirt
+  - CP14MerchantPants
+  - CP14MerchantShoes
   - CP14GeneralBack
   - CP14GeneralTrinkets
