--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/demiplane_rifts.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/demiplane_rifts.yml
@@ -112,3 +112,31 @@
         range: 2, 3
       children:
       - id: CP14MobRabbit
+
+- type: entity
+  parent: CP14BaseMobGroupSpawner
+  id: CP14MobGroupSpawnerFrogs
+  suffix: 2-3 Frogs
+  components:
+  - type: EntityTableSpawner
+    deleteSpawnerAfterSpawn: false
+    offset: 1
+    table: !type:GroupSelector
+      rolls: !type:RangeNumberSelector
+        range: 2, 3
+      children:
+      - id: CP14MobFrog
+
+- type: entity
+  parent: CP14BaseMobGroupSpawner
+  id: CP14MobGroupSpawnerIceSpectres
+  suffix: 1-2 Ice spectres
+  components:
+  - type: EntityTableSpawner
+    deleteSpawnerAfterSpawn: false
+    offset: 1
+    table: !type:GroupSelector
+      rolls: !type:RangeNumberSelector
+        range: 1, 2
+      children:
+      - id: CP14MobIceSpectre
