--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Darkness/T0_monolith_warp.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Darkness/T0_monolith_warp.yml
@@ -37,6 +37,7 @@
 - type: entity
   id: CP14GuildmaterTimedTeleport
   categories: [ ForkFiltered ]
+  suffix: Teleport to demiplane crystal
   name: pulsating demiplane rift
   description: This rift is gaining strength, and will trap all nearby creatures in a demiplane in a second!
   components:
