--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/misc.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/misc.yml
@@ -53,3 +53,19 @@
       count: 10
       minGroupSize: 1
       maxGroupSize: 1
+
+- type: cp14DemiplaneModifier
+  id: UnstableDemiplaneCrystal
+  generationWeight: 0.05 # Very rare
+  tiers:
+    - 2
+    - 3
+  name: cp14-modifier-unstable-demiplane-crystal
+  categories:
+    Danger: 0.3
+  layers:
+    - !type:OreDunGen
+      entity: CP14DangerousMobSpawnCrystal
+      count: 1
+      minGroupSize: 1
+      maxGroupSize: 1
