--- a/Resources/Prototypes/_CP14/Entities/Structures/round_end.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/round_end.yml
@@ -56,3 +56,8 @@
   - type: CP14MagicEnergyDraw
     energy: -10
     delay: 60 # 1h 30 minutes to full discharge
+  - type: AmbientSound
+    volume: 5
+    range: 10
+    sound:
+      path: /Audio/_CP14/Effects/demiplane_heartbeat.ogg
