--- a/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
@@ -33,7 +33,7 @@
   parent: CP14ClothingRingBase
   name: fireball conductive ring
   description: A standard mana-conductive ring that allows the user to summon fireballs.
-  suffix: Fireball
+  suffix: Fireball, Artifact, DO NOT MAP
   components:
   - type: Sprite
     layers:
