--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/magical_acceleration.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/magical_acceleration.yml
@@ -31,6 +31,7 @@
 - type: entity
   id: CP14MagicAccelerationDustEffect
   parent: CP14DustEffect
+  categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     drawdepth: Items
