--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
@@ -107,3 +107,5 @@
       - !type:GroupSelector # remove this when players can create their own magic items
         children:
         - id: CP14SpellScrollResurrection
+        - id: CP14ClothingRingIceShards
+        - id: CP14ClothingRingFlashLight
