--- a/Resources/Prototypes/_CP14/Entities/Clothing/OuterClothing/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/OuterClothing/base.yml
@@ -11,3 +11,24 @@
     - outerClothing
   - type: Sprite
     state: icon
+
+- type: entity
+  abstract: true
+  parent: [ CP14ClothingOuterClothingBase, BaseFoldable ]
+  id: CP14ClothingOuterFoldableBase
+  components:
+  - type: Appearance
+  - type: Foldable
+    canFoldInsideContainer: true
+    unfoldVerbText: fold-zip-verb
+    foldVerbText: fold-unzip-verb
+  - type: FoldableClothing
+    foldedEquippedPrefix: open
+    foldedHeldPrefix: open
+  - type: Sprite
+    layers:
+    - state: icon
+      map: [ "unfoldedLayer" ]
+    - state: icon-open
+      map: ["foldedLayer"]
+      visible: false
