--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -243,7 +243,7 @@ CP14Nail10: CP14Nail20
 #2025-07-02
 CP14SpawnPointBanker: CP14SpawnPointMerchant
 CP14ClothingOuterClothingBankerWaistCoat: CP14ClothingOuterClothingMerchantWaistCoat
-CP14ClothingOuterClothingBankerWaistCoatOpen: CP14ClothingOuterClothingMerchantWaistCoatOpen
+CP14ClothingOuterClothingBankerWaistCoatOpen: null
 CP14ClothingShirtBanker: CP14ClothingShirtMerchant
 CP14KeyRingBanker: CP14KeyRingMerchant
 CP14WoodenCabinetBanker: CP14WoodenCabinetMerchant
